<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spin"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="316dp"
        android:layout_height="467dp"
        app:cardCornerRadius="@android:dimen/app_icon_size"
        app:cardElevation="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">

        <Button
            android:id="@+id/button"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/button2"
            android:layout_width="186dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_button"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="9sp"
            tools:ignore="HardcodedText,MissingConstraints,SmallSp"


            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="212dp"
            android:layout_height="58dp"
            android:layout_marginStart="@android:dimen/app_icon_size"
            android:layout_marginTop="65dp"
            android:hint="@string/email" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#B59B9B"
            app:passwordToggleEnabled="true"

            >

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="212dp"
                android:layout_height="50dp"
                android:layout_marginStart="@android:dimen/app_icon_size"
                android:layout_marginTop="140dp"
                android:autofillHints=" "
                android:ems="10"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/button3"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="15dp"
            android:text="@string/log_in"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>