<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spin"
    tools:context=".signin">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="316dp"
        android:layout_height="467dp"
        app:cardCornerRadius="@android:dimen/app_icon_size"
        app:cardElevation="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">


        <EditText
            android:id="@+id/ettextInputEditText"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:ems="10"
            android:hint="name"
            android:inputType="textPersonName"
            android:minHeight="48dp"

            />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="surname"
            android:minHeight="48dp"
            />




        <EditText
            android:id="@+id/etTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="50dp"
            android:layout_marginTop="120dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true"

            >


            <EditText
                android:id="@+id/etTextPassword2"
                android:layout_width="212dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="235dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:background="@color/white"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button4"
                android:layout_marginTop="120dp"
                android:layout_marginStart="50dp"
                android:height="50dp"
                android:width="212dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"

                >

                <EditText
                    android:id="@+id/etTextPassword3"
                    android:layout_width="212dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="295dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="password again"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="212dp"
            android:layout_height="50dp"
            android:layout_marginTop="175dp"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:hint="phone"
            android:inputType="phone"
            />





        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="350dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="365dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="Terms and conditions"
            tools:ignore="DuplicateIds" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:text="@string/signin"
        android:textColor="@color/transparent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>